--- a/views/index.html
+++ b/views/index.html
@@ -2,11 +2,26 @@
 <html>
 <head>
 	<title>DEMO</title>
-	<link rel="stylesheet" type="text/css" href="app.css">
+	<link rel="stylesheet" type="text/css" href="public/app.css">
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
 </head>
 <body>
-	<h1>THIS IS THE WTF API</h1>
+	<header>
+		<h1>todo<span>list</span></h1>
+		<h2>we have ours todolist here</h2>
+	</header>
+	<section class="form">
+		<input type="text" id="todoInput" name="" placeholder="insert your task here.......">
+	</section>
 
-<p>todo will go here</p>
+	<ul class="list">
+		
+	</ul>
+
+	<script type="text/javascript" src="public/app.js"></script>
 </body>
 </html>
