--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,80 @@
-h1{
-	color:purple;
+/*@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');*/
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
+body{
+	font-family:'Open+Sans',sans-serif;
+	background: #ecf0f1;
+}
+
+header{
+	text-align: center;
+}
+
+header h1{
+	font-weight: normal;
+	font-size: 4em;
+}
+
+header h1 span{
+	font-weight: bold;
+}
+
+header h2{
+	font-size:2em;
+	font-weight: normal;
+}
+.form{
+	width:40%;
+	margin:50px auto 20px;
+}
+
+#todoInput{
+	width: 100%;
+	height: 60px;
+	background:none;
+	border:none;
+	border-bottom:1px solid black;
+	outline:none;
+	font:300 28px 'Ubuntu',sans-serif;
+	padding:20px;
+	color:#34495e;
+	text-align: center;
+}
+
+.task{
+	margin-left: 20%;
+	padding:0 20px;
+	font-size:1.5em;
+	line-height: 60px;
+	transition: all .3s ease;
+}
+
+.task:hover{
+	background: rgba(0, 0, 0, .02);
+	cursor:pointer;
+}
+
+.task:hover span{
+	opacity: 1;
+}
+
+.list{
+	width:800px;
+	margin:0 auto;
+}
+
+.done{
+	text-decoration:line-through;
+	opacity: 1;
+}
+
+.task span{
+	float: right;
+	color: red;
+	transition: all 0.3s ease;
+	opacity: 0;
+}
+
+.task span:hover{
+	font-size: 1.5em;
 }
