updated some actions

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 		<h2>we have ours todolist here</h2>
 	</header>
 	<section class="form">
-		<input type="text" id="todoInput" name="" placeholder="insert your task here.......">
+		<input type="text" id="todoInput" name="" placeholder="insert your task here......." required>
 	</section>
 
 	<ul class="list">
